--- a/ivy.xml
+++ b/ivy.xml
@@ -2,6 +2,9 @@
   <info organisation="org.crosswire" module="jsword"/>
   <dependencies>
     <dependency org="org.apache.commons"        name="commons-compress" rev="1.12"     conf="default->master,sources" />
+    <dependency org="commons-logging"        name="commons-logging" rev="1.1.3"     conf="default->master,sources" />
+    <dependency org="commons-lang"        name="commons-lang" rev="2.5"     conf="default->master,sources" />
+    <dependency org="com.chenlb.mmseg4j"        name="mmseg4j-all" rev="1.8.6"     conf="default->master,sources" />
     <dependency org="org.apache.httpcomponents" name="httpcore"         rev="4.3.2"     conf="default->master,sources" />
     <dependency org="org.apache.httpcomponents" name="httpclient"       rev="4.3.2"     conf="default->master,sources" />
     <dependency org="javatar"                   name="javatar"          rev="2.5"       conf="default->master,sources" />
