--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: "java"
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 ext {
     jsword_project = "../../jsword"
@@ -13,7 +13,7 @@ ext {
     build_resources = "src/jsword/resources"
     distribution = "distribution"
     andbible = "../and-bible"
-    build_class = "jsword.jar"
+    build_class = "build"
     jswordtweaks_home = "$rootDir"
 }
 
@@ -56,15 +56,12 @@ task mergeCode(type: Copy, dependsOn: init) {
     into(build_src)
 }
 
-clean.dependsOn clean_project, init
-build.dependsOn mergeResources, mergeCode
 
 sourceSets {
     main {
         java {
             srcDir 'src/main/java'
             srcDir 'src/jsword/java'
-            srcDir 'src/util/java'
         }
         resources {
             srcDir 'src/main/resources'
@@ -74,13 +71,11 @@ sourceSets {
     }
 }
 
-task compile(type: JavaCompile) {
-    source = fileTree(dir: build_src, include: '**/*.java')
-    destinationDir = file(build_class)
-    sourceCompatibility = '1.6'
-    targetCompatibility = '1.6'
-    //classpath = files(build_src); //.defaultDependencies()
-}
+
+clean.dependsOn clean_project, init
+build.dependsOn mergeResources, mergeCode, compileJava, jar
+
+
 repositories {
     mavenCentral()
 }
